2nd part features

--- a/index.html
+++ b/index.html
@@ -24,12 +24,35 @@
             <article>
                 <h1>A Simple Bookmark Manager</h1>
                 <p>A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
-                <div >
+                <div>
                     <button class="btn btn-purple">Get it on Chrome</button>
                     <button class="btn">Get it on Firefox</button>
                 </div>          
             </article>
         </div>
     </main>
+    <section>
+        <div class="feature">
+            <article>
+                <h2>Features</h2>
+                <p>Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
+                <div class="container-button">
+                    <div><h3>Simple Bookmarking</h3>
+                    </div>
+                    <div class="middle-button"><h3>Speedy Searching</h3></div>
+                    <div><h3>Easy Sharing</h3></div>
+                </div>
+            </article>
+        </div> 
+        <div class="feature">
+            <img src="./assets/img/illustration-features-tab-1.svg" alt="">
+            <article>
+                <h2>Bookmark in one click</h2>
+                <p>Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
+            </article>
+        </div> 
+    </section>
+    
+
 </body>
 </html>
