--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </article>
         </div>
     </main>
-    <section>
+    <section class="space">
         <div class="feature">
             <article class="data">
                 <h2>Features</h2>
@@ -78,6 +78,36 @@
                     <button class="btn btn-purple">Add & Install Extension</button>
                 </article>
             </div>
+        </div>
+    </section>
+    <section>
+        <div class="question">
+            <article class="data">
+                <h2>Frequently Asked Questions</h2>
+                <p>Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.</p>
+            </article>
+            <div class="container-question">
+                <div>
+                    <h4>What is Bookmark?</h3>
+                    <img src="./assets/img/icon-arrow.svg" alt="">
+                </div>
+                <div>
+                    <h4>How can I request a new browser?</h4>
+                    <img src="./assets/img/icon-arrow.svg" alt="">
+                </div>
+                <div>
+                    <h4>Is there a mobile app?</h4>
+                    <img src="./assets/img/icon-arrow.svg" alt="">
+                </div>
+                <div>
+                    <h4>What about other Chromium browsers?</h4>
+                    <img src="./assets/img/icon-arrow.svg" alt="">
+                </div>    
+            </div>
+            <div>
+                <button class="btn btn-purple">More info</button>
+            </div>
+        </div>
     </section>
 </body>
 </html>
