--- a/index.html
+++ b/index.html
@@ -109,5 +109,29 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="contact">
+            <article class="data">
+                <p>35,000+ already joined</p>
+                <h2>Stay up-to-date with what we’re doing</h2>
+                <div>
+                    <input type="text" placeholder="Enter your email address">
+                    <button class="btn-contact">Contact Us</button>
+                </div>
+            </article>
+        </div>
+    </section>
+    <footer>
+            <div>
+                <img src="./assets/logo-bookmark.svg" alt="">
+            </div>
+            <h3>FEATURES</h3> 
+            <h3>PRICING</h3>    
+            <h3>CONTACT</h3>
+            <div class="media">
+                <img src="./assets/img/icon-facebook.svg" alt="">
+                <img src="./assets/img/icon-twitter.svg" alt="">
+            </div>
+    </footer>
 </body>
 </html>
