--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <section>
         <div class="contact">
             <article class="data">
-                <p>35,000+ already joined</p>
+                <p>35,000+ ALREADY JOINED</p>
                 <h2>Stay up-to-date with what we’re doing</h2>
                 <div>
                     <input type="text" placeholder="Enter your email address">
