--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <p>35,000+ ALREADY JOINED</p>
                 <h2>Stay up-to-date with what we’re doing</h2>
                 <div>
-                    <input type="text" placeholder="Enter your email address">
+                    <input type="email" placeholder="Enter your email address">
                     <button class="btn-contact">Contact Us</button>
                 </div>
             </article>
