--- a/index.html
+++ b/index.html
@@ -13,10 +13,20 @@
 </head>
 <body>
     <header>
-        <nav>
+        <div>
             <img src="./assets/img/logo-bookmark.svg" alt="">
-            <img width="18px" height="18px" src="./assets/img/icon-hamburger.svg" alt="">
+        </div>       
+        <nav>
+            <ul>
+                <li>FEATURES</li>
+                <li>PRICING</li>
+                <li>CONTACT</li>
+                <li class="login"">LOGIN</li>
+            </ul>
         </nav>
+        <div class="hamburguer">
+            <img width="18px" height="18px" src="./assets/img/icon-hamburger.svg" alt="">
+        </div>
     </header>
     <main>
         <div class="container main">
@@ -123,11 +133,14 @@
     </section>
     <footer>
             <div>
-                <img src="./assets/logo-bookmark.svg" alt="">
+                <div>
+                    <img src="./assets/logo-bookmark.svg" alt="">
+                </div>
+                <h3>FEATURES</h3> 
+                <h3>PRICING</h3>    
+                <h3>CONTACT</h3>
             </div>
-            <h3>FEATURES</h3> 
-            <h3>PRICING</h3>    
-            <h3>CONTACT</h3>
+            
             <div class="media">
                 <img src="./assets/img/icon-facebook.svg" alt="">
                 <img src="./assets/img/icon-twitter.svg" alt="">
