--- a/index.html
+++ b/index.html
@@ -32,14 +32,39 @@
         <div>
             <img src="./assets/img/illustration-hero.svg" alt="">
         </div>    
-        <article class="data">
+        <article class="data left">
                 <h1>A Simple Bookmark Manager</h1>
                 <p>A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
                 <div>
-                    <button class="btn purple">Get it on Chrome</button>
-                    <button class="btn white">Get it on Firefox</button>
+                    <button class="btn" id="purple">Get it on Chrome</button>
+                    <button class="btn" id="white">Get it on Firefox</button>
                 </div>
         </article>
     </main>
+    <section class="feature">
+        <article class="data">
+            <h2>Features</h2>
+            <p>Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
+        </article>
+        <div class="container-button">
+            <div class="first-button"><h3>Simple Bookmarking</h3>
+            </div>
+            <div class="last-buttons"><h3>Speedy Searching</h3></div>
+            <div class="last-buttons"><h3>Easy Sharing</h3></div>
+        </div>
+        <div class="detail">
+            <div>
+                <img src="./assets/img/illustration-features-tab-1.svg" alt="">
+            </div>
+            <article class="data">
+                    <h2>Bookmark in one click</h2>
+                    <p>Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
+            </article> 
+        </div>
+        
+    </section>
+
+
+
 </body>
 </html>
