--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </article>
     </main>
     <section class="feature">
-        <article class="data">
+        <article class="data center">
             <h2>Features</h2>
             <p>Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
         </article>
@@ -56,7 +56,7 @@
             <div>
                 <img src="./assets/img/illustration-features-tab-1.svg" alt="">
             </div>
-            <article class="data">
+            <article class="data left">
                     <h2>Bookmark in one click</h2>
                     <p>Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
             </article> 
