--- a/index.html
+++ b/index.html
@@ -61,10 +61,35 @@
                     <p>Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
             </article> 
         </div>
-        
     </section>
-
-
-
+    <section>
+        <div class="download">
+            <article class="data">
+                <h2>Download the extension</h2>
+                <p>We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize.</p>
+            </article>
+            <div class="browser">
+                <article>
+                    <img src="./assets/img/logo-chrome.svg" alt="">
+                    <h3>Add to Chrome</h3>
+                    <p>Minimum version 62</p>
+                    <button class="btn btn-purple">Add & Install Extension</button>
+                </article>
+                <article>
+                    <img src="./assets/img/logo-firefox.svg" alt="">
+                    <h3>Add to Firefox</h3>
+                    <p>Minimum version 55</p>
+                    <button class="btn btn-purple">Add & Install Extension</button>
+                </article>
+                <article>
+                    <img src="./assets/img/logo-opera.svg" alt="">
+                    <h3>Add to Opera</h3>
+                    <p>Minimum version 46</p>
+                    <button class="btn btn-purple">Add & Install Extension</button>
+                </article>
+            </div>
+        </div>
+    </section>
+    
 </body>
 </html>
