--- a/index.html
+++ b/index.html
@@ -126,14 +126,19 @@
     </section>
     <footer>
         <div>
-            <img src="./assets/logo-bookmark.svg" alt="">
+            <img class="logo" src="./assets/logo-bookmark.svg" alt="">
             <h3>FEATURES</h3> 
             <h3>PRICING</h3>     
             <h3>CONTACT</h3>
         </div>
         <div class="media">
-            <img src="./assets/img/icon-facebook.svg" alt="">
-            <img src="./assets/img/icon-twitter.svg" alt="">
+            <div>
+                <img src="./assets/img/icon-facebook.svg" alt="">
+            </div>
+            <div>
+                <img src="./assets/img/icon-twitter.svg" alt="">
+            </div>
+           
         </div>
 </footer>
 </body>
