--- a/index.html
+++ b/index.html
@@ -14,18 +14,20 @@
 <body>
     <header>
         <div>
-            <img src="./assets/img/logo-bookmark.svg" alt="">
-        </div>       
-        <nav>
-            <ul>
-                <li>FEATURES</li>
-                <li>PRICING</li>
-                <li>CONTACT</li>
-                <li class="login"">LOGIN</li>
-            </ul>
-        </nav>
-        <div class="hamburguer">
-            <img width="18px" height="18px" src="./assets/img/icon-hamburger.svg" alt="">
+            <div>
+                <img src="./assets/img/logo-bookmark.svg" alt="">
+            </div>       
+            <nav>
+                <ul>
+                    <li>FEATURES</li>
+                    <li>PRICING</li>
+                    <li>CONTACT</li>
+                    <li class="login"">LOGIN</li>
+                </ul>
+            </nav>
+            <div class="hamburguer">
+                <img width="18px" height="18px" src="./assets/img/icon-hamburger.svg" alt="">
+            </div>    
         </div>
     </header>
     <main>
@@ -120,7 +122,7 @@
         <p>35,000+ ALREADY JOINED</p>
         <h2>Stay up-to-date with what we’re doing</h2>
         <div>
-            <input type="email" placeholder="Enter your email address">
+            <input class="email-input" type="email" placeholder="Enter your email address">
             <button class="btn-contact">Contact Us</button>
         </div>        
     </section>
@@ -141,5 +143,6 @@
            
         </div>
 </footer>
+<script src="./index.js"></script>
 </body>
 </html>
