--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <header>
-        <div>
+        <section class="container-header"></div>
             <div>
-                <img src="./assets/img/logo-bookmark.svg" alt="">
+                <img src="../assets/img/logo-bookmark.svg" alt="">
             </div>       
             <nav>
                 <ul>
@@ -26,9 +26,9 @@
                 </ul>
             </nav>
             <div class="hamburguer">
-                <img width="18px" height="18px" src="./assets/img/icon-hamburger.svg" alt="">
-            </div>    
-        </div>
+                <img width="18px" height="18px" src="../assets/img/icon-hamburger.svg" alt="">
+            </div>
+        </section>
     </header>
     <main>
         <img src="./assets/img/illustration-hero.svg" alt="">  
