--- a/test/prueba.html
+++ b/test/prueba.html
@@ -4,32 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/prueba.css">
+    <link rel="stylesheet" href="../assets/css/prueba.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">  
-    <title>Document</title>
+    <title>Frontend Mentor | Bookmark landing page</title>
 </head>
 <body>
     <header>
-        <div>
-            <img src="./assets/img/logo-bookmark.svg" alt="">
-        </div>       
-        <nav>
-            <ul>
-                <li>FEATURES</li>
-                <li>PRICING</li>
-                <li>CONTACT</li>
-                <li class="login"">LOGIN</li>
-            </ul>
-        </nav>
-        <div class="hamburguer">
-            <img width="18px" height="18px" src="./assets/img/icon-hamburger.svg" alt="">
-        </div>
+        <section class="container-header"></div>
+            <div>
+                <img src="../assets/img/logo-bookmark.svg" alt="">
+            </div>       
+            <nav>
+                <ul>
+                    <li>FEATURES</li>
+                    <li>PRICING</li>
+                    <li>CONTACT</li>
+                    <li class="login"">LOGIN</li>
+                </ul>
+            </nav>
+            <div class="hamburguer">
+                <img width="18px" height="18px" src="../assets/img/icon-hamburger.svg" alt="">
+            </div>
+        </section>
     </header>
+    
+    
     <main>
-        <img src="./assets/img/illustration-hero.svg" alt="">  
+        <img src="../assets/img/illustration-hero.svg" alt="">  
         <article class="data-left">
                 <h1>A Simple Bookmark Manager</h1>
                 <p>A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
@@ -55,6 +59,7 @@
             <article class="data-left">
                     <h2>Bookmark in one click</h2>
                     <p>Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
+                    <button class="btn purple">More info</button>
             </article> 
         </div>
     </section>
@@ -94,19 +99,19 @@
             </article>
             <div class="container-question">
                 <div>
-                    <h4>What is Bookmark?</h4>
+                    <h3>What is Bookmark?</h3>
                     <img src="./assets/img/icon-arrow.svg" alt="">
                 </div>
                 <div>
-                    <h4>How can I request a new browser?</h4>
+                    <h3>How can I request a new browser?</h3>
                     <img src="./assets/img/icon-arrow.svg" alt="">
                 </div>
                 <div>
-                    <h4>Is there a mobile app?</h4>
+                    <h3>Is there a mobile app?</h3>
                     <img src="./assets/img/icon-arrow.svg" alt="">
                 </div>
                 <div>
-                    <h4>What about other Chromium browsers?</h4>
+                    <h3>What about other Chromium browsers?</h3>
                     <img src="./assets/img/icon-arrow.svg" alt="">
                 </div>    
             </div>
