--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
     <header>
         <section class="container-header"></div>
             <div>
-                <img src="../assets/img/logo-bookmark.svg" alt="">
+                <a href="#home"><img src="../assets/img/logo-bookmark.svg" alt=""></a>
             </div>       
             <nav>
                 <ul>
-                    <li>FEATURES</li>
+                    <li><a href="#feature">FEATURES</a></li>
                     <li>PRICING</li>
-                    <li>CONTACT</li>
+                    <li><a href="#contact">CONTACT</a></li>
                     <li class="login"">LOGIN</li>
                 </ul>
             </nav>
-            <div class="hamburguer">
+            <div class="hamburger">
                 <img width="18px" height="18px" src="../assets/img/icon-hamburger.svg" alt="">
             </div>
         </section>
     </header>
-    <main>
+    <main id="home">
         <img src="./assets/img/illustration-hero.svg" alt="">  
         <article class="data-left">
                 <h1>A Simple Bookmark Manager</h1>
@@ -41,7 +41,7 @@
                 </div>
         </article>
     </main>
-    <section class="feature">
+    <section id="feature" class="feature">
         <article class="data-center">
             <h2>Features</h2>
             <p>Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
@@ -118,7 +118,7 @@
             </div>
         </div>
     </section>
-    <section class="contact">
+    <section id="contact" class="contact">
         <p>35,000+ ALREADY JOINED</p>
         <h2>Stay up-to-date with what we’re doing</h2>
         <div>
@@ -128,7 +128,7 @@
     </section>
     <footer>
         <div>
-            <img class="logo" src="./assets/logo-bookmark.svg" alt="">
+            <a href="#home"><img class="logo" src="./assets/logo-bookmark.svg" alt=""></a>
             <h3>FEATURES</h3> 
             <h3>PRICING</h3>     
             <h3>CONTACT</h3>
