--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <footer>
         <div>
             <a href="#home"><img class="logo" src="./assets/logo-bookmark.svg" alt=""></a>
-            <h3>FEATURES</h3> 
+            <h3><a href="#feature">FEATURES</a></h3> 
             <h3>PRICING</h3>     
             <h3>CONTACT</h3>
         </div>
