--- a/index.html
+++ b/index.html
@@ -15,20 +15,29 @@
     <header>
         <section class="container-header"></div>
             <div>
-                <a href="#home"><img src="../assets/img/logo-bookmark.svg" alt=""></a>
+                <img src="../assets/img/logo-bookmark.svg" alt="">
             </div>       
-            <nav>
-                <ul>
-                    <li><a href="#feature">FEATURES</a></li>
-                    <li>PRICING</li>
-                    <li><a href="#contact">CONTACT</a></li>
-                    <li class="login"">LOGIN</li>
-                </ul>
-            </nav>
-            <div class="hamburger">
-                <img width="18px" height="18px" src="../assets/img/icon-hamburger.svg" alt="">
+            <div>
+                <div class="exit">X</div>
+                <img class="hamburger" width="18px" height="18px" src="../assets/img/icon-hamburger.svg" alt="">
             </div>
-        </section>
+        </section>    
+        <nav class="nav-menu">
+            <ul>
+                <li>FEATURES</li>
+                <li>PRICING</li>
+                <li>CONTACT</li>
+                <li class="login">LOGIN</li>
+            </ul>
+            <div class="media">
+                <div>
+                    <img src="../assets/img/icon-facebook.svg" alt="">
+                </div>
+                <div>
+                    <img src="../assets/img/icon-twitter.svg" alt="">
+                </div>
+            </div>
+        </nav>          
     </header>
     <main id="home">
         <img src="./assets/img/illustration-hero.svg" alt="">  
