--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <section class="container-header"></div>
             <div>
-                <img src="../assets/img/logo-bookmark.svg" alt="">
+                <a href=""><img class="logomaster" src="../assets/img/logo-bookmark.svg" alt=""></a>
             </div>       
             <div>
                 <div class="exit">X</div>
@@ -24,9 +24,9 @@
         </section>    
         <nav class="nav-menu">
             <ul>
-                <li>FEATURES</li>
-                <li>PRICING</li>
-                <li>CONTACT</li>
+                <a href="#feature"><li>FEATURES</li></a>
+                <a href=""><li>PRICING</li></a>
+                <a href="#contact"><li>CONTACT</li></a>
                 <li class="login">LOGIN</li>
             </ul>
             <div class="media">
