--- a/index.html
+++ b/index.html
@@ -58,16 +58,28 @@
         <div class="container-button">
             <div class="first-button"><h3>Simple Bookmarking</h3>
             </div>
-            <div class="last-buttons"><h3>Speedy Searching</h3></div>
+            <div class="second-buttons"><h3>Speedy Searching</h3></div>
             <div class="last-buttons"><h3>Easy Sharing</h3></div>
         </div>
         <div class="detail">
-            <img src="./assets/img/illustration-features-tab-1.svg" alt="">
-            <article class="data-left">
+            <img id="img1st-feature" src="./assets/img/illustration-features-tab-1.svg" alt="">
+            <article id="art1st-feature" class="data-left">
                     <h2>Bookmark in one click</h2>
                     <p>Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
                     <button class="btn purple">More info</button>
-            </article> 
+            </article>
+            <img id="img2nd-feature" src="./assets/img/illustration-features-tab-2.svg" alt="">
+            <article id="art2nd-feature" class="data-left">
+                    <h2>Intelligent search</h2>
+                    <p>Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
+                    <button class="btn purple">More info</button>
+            </article>
+            <img id="img3rd-feature" src="./assets/img/illustration-features-tab-3.svg" alt="">
+            <article id="art3rd-feature" class="data-left">
+                    <h2>Share your bookmarks</h2>
+                    <p>Easily share your bookmarks and lections with others. Create a shareable link that you can send at the click of a button.</p>
+                    <button class="btn purple">More info</button>
+            </article>
         </div>
     </section>
     <section class="download">
