--- a/index.html
+++ b/index.html
@@ -117,22 +117,34 @@
                 <p>Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.</p>
             </article>
             <div class="container-question">
-                <div>
+                <div class="question1">
                     <h3>What is Bookmark?</h3>
                     <img src="./assets/img/icon-arrow.svg" alt="">
                 </div>
-                <div>
+                <p class="answer1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt justo eget ultricies fringilla. Phasellus blandit ipsum quis quam ornare mattis.</p>
+                <div class="question2">
                     <h3>How can I request a new browser?</h3>
                     <img src="./assets/img/icon-arrow.svg" alt="">
                 </div>
-                <div>
+                <p class="answer2">
+                    Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, 
+                    ultricies non ligula.
+                    Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.
+                </p>
+                <div class="question3">
                     <h3>Is there a mobile app?</h3>
                     <img src="./assets/img/icon-arrow.svg" alt="">
                 </div>
-                <div>
+                <p class="answer3">
+                    Sed consectetur quam id neque fermentum accumsan. Praesent luctus vestibulum dolor, ut condimentum urna vulputate eget. Cras in ligula quis est pharetra mattis sit amet pharetra purus. Sed sollicitudin ex et ultricies bibendum.
+                </p>
+                <div class="question4">
                     <h3>What about other Chromium browsers?</h3>
                     <img src="./assets/img/icon-arrow.svg" alt="">
-                </div>    
+                </div>
+                <p class="answer4">
+                    Integer condimentum ipsum id imperdiet finibus. Vivamus in placerat mi, at euismod dui. Aliquam vitae neque eget nisl gravida pellentesque non ut velit.
+                </p>  
             </div>
             <div>
                 <button class="btn purple">More info</button>
