--- a/index.html
+++ b/index.html
@@ -155,7 +155,10 @@
         <p>35,000+ ALREADY JOINED</p>
         <h2>Stay up-to-date with what we’re doing</h2>
         <div>
-            <input class="email-input" type="email" placeholder="Enter your email address">
+            <div>
+                <input class="email-input" type="email" placeholder="Enter your email address" required>
+                <div class="messagefail"></div>
+            </div>
             <button class="btn-contact">Contact Us</button>
         </div>        
     </section>
