error message ended

--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
     <section id="contact" class="contact">
         <p>35,000+ ALREADY JOINED</p>
         <h2>Stay up-to-date with what we’re doing</h2>
-        <div>
+        <div class="buttonContainer">
             <div>
                 <input class="email-input" type="email" placeholder="Enter your email address" required>
-                <div class="messagefail"></div>
+                <div class="messageFail"><small>Whoops, make sure it´s an email</small></div>
             </div>
             <button class="btn-contact">Contact Us</button>
         </div>        
