--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
         <h2>Stay up-to-date with what we’re doing</h2>
         <div class="buttonContainer">
             <div>
-                <input class="email-input" type="email" placeholder="Enter your email address" required>
+                <input class="email-input" type="email" placeholder="Enter your email address">
+                <img class="error-message" src=".//assets/img/icon-error.svg" alt="">
                 <div class="messageFail"><small>Whoops, make sure it´s an email</small></div>
             </div>
             <button class="btn-contact">Contact Us</button>
@@ -178,6 +179,6 @@
             </div>
         </div>
 </footer>
-<script src="./index.js"></script>
 </body>
+<script src="./index.js"></script>
 </html>
